--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -2,6 +2,7 @@
     <nav>
             <ul class="nav-ul">
               <li class="link"><a href="{{site.baseurl}}/">Home</a></li>
+              <li class="link"><a href="{{site.baseurl}}/about/">About</a></li>
               <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
               <li class="dropdown link">
                 <a href="#" class="dropbtn">Dropdown</a>
