--- a/_includes/nav-page.html
+++ b/_includes/nav-page.html
@@ -2,6 +2,7 @@
     <nav>
             <ul class="nav-ul">
               <li class="link" style="background-color: #37c376"><a href="{{site.baseurl}}/">{{site.title}}</a></li>
+              <li class="link"><a href="{{site.baseurl}}/about/">About</a></li>
               <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
               <li class="dropdown link">
                 <a href="#" class="dropbtn">Dropdown</a>
