--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <div class="container bg">
 <div class="row head-row">
      <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #b96262, #cc3255);">
-        <h1 class="headline">{{site.title}}</h1>
+        <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
      </header>
  </div>
 {% include nav-home.html %}
