--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -81,7 +81,7 @@ pre {
   font-size: 120px;
   height: 100px;
   line-height: 200px;
-  color: #fff;
+  color: #fefefe;
   text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0, 0, 0, 0.34);
   @include media-query($on-palm) {
     font-size: 65px;
