--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
 <html>
 {% include head.html %}
 <body>
-<div class="container partition" style="border: 1px solid #eee">
+<div class="container partition">
 {% include nav-page.html %}
 {% if page.img %}
 <div class="page-image" style="background-image: url({{site.baseurl}}/img/{{page.img}})"></div>
