--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -23,7 +23,9 @@ body {
 }
 
 .partition {
-    background-color: #fff; 
+    background-color: #fff;
+ box-shadow: 0 0 4px #ddd;
+
 }
 
 
@@ -128,7 +130,7 @@ pre {
     display: none;
     position: absolute;
     background-color: #000;
-    min-width: 160px;
+    min-width: 135px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 999;
 
