--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,8 +1,8 @@
 /* All */
-* {
-      transition: all 0.5s ease;
+/* * {
+      transition: all 0.1s ease;
 }
-
+ */
 body {
     background-color: #fefefe;
 }
