removed test posts and added first proper posts

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -10,7 +10,7 @@ body {
 /* Main container */
 .container {
     @include media-query($on-palm) {
-        padding: 0;
+        padding: 0px;
     }
 }
 
